css/style.css
/* ... */
/**
 * Full Height div
 * Set element to height: 100%
 * Does not work on mobile
 */

:root {
    height: 100%;
}

html, body {
    height: 100%;
    min-height: 100%;
}

body, ul,
figure {
    margin: 0;
    padding: 0;
}

h1, h2, h3, 
h4, h5, h6,
p {
    margin: 0;
}

/* Responsive images */
img {
    height: auto;
    max-width: 100%;
    vertical-align: middle;
    border: 0;
    border-style: none;
}

@media (min-width: 600px) {
    figure img {
        -o-object-fit: cover;
           object-fit: cover;
        min-width: 100%;
        min-height: 100%;
    }
}

/**
 * Fluid Typography
 */
/* html {
    font-size: 16px;
}

@media screen and (min-width: 320px) {
    html {
        font-size: calc(16px + 6 * ((100vw - 320px) / 680));
    }
}

@media screen and (min-width: 1000px) {
    html {
        font-size: 22px;
    }
} */

:root {
    font-size: calc(16px + (26 - 14) * ((100vw - 300px) / (1600 - 300)));
}

body {
    line-height: 1.45;
    font-weight: 400;
    font-family: "Trebuchet MS", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Tahoma, sans-serif;
    font-style: normal;
    text-rendering: optimizeLegibility;
}

p {
    margin-bottom: 1.3em;
}

h1, h2, h3, h4 {
    font-weight: inherit;
    line-height: 1.2;
}

/**
 * Container
 */
.container {
    margin-right: auto;
    margin-left: auto;
    padding-right: 10px;
    padding-left: 10px;
    width: 100%;
    max-width: 100%;
}

@media (max-width: 600px) {
    .hide-m {
        display: none; 
    }
}

@media (min-width: 768px) {
    .container {
        width: 750px;
    }
}

@media (min-width: 992px) {
    .container {
        width: 970px;
    }
}

@media (min-width: 1200px) {
    .container {
        width: 1170px;
    }
}

.x-space {
    margin-bottom: 5em;
}

/**
 * Styles
 * cosmic latte 

body {
    background: #fff8e7;
} 
*/


/**
 * Nav Styles
 */
nav ul,
.nav-logo,
.mobile-nav__header,
.modal--content li {
    list-style-type: none;
    margin: 0;
    padding: 0;
}
 
nav ul li a,
.modal--header li a,
.mobile-nav__header li a,
.modal--content li a {
    text-decoration: none;
}
 
.nav {
    padding-top: 0.5em;
    padding-bottom: 0.5em;
}
 
.nav-container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}
 
.nav-logo {
    margin-right: auto;
}
 
.nav-container li:not(:first-child) a {
    padding: 10px 15px;
    text-align: center;
}
 
.mobile-nav {
    display: none;
}
 
@media (max-width: 600px) {
    .nav-container {
        display: none;
    }
    .nav-logo {
        margin-right: initial;
    }
    .mobile-nav {
        display: block;
    }
    .mobile-nav__header {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: justify;
            -ms-flex-pack: justify;
                justify-content: space-between;
    }

    .bar-top, .bar-middle,
    .bar-bottom {
        width: 25px;
        height: 4px;
        background-color: #333;
        transition: 0.4s ease-in;
    }
    .bar-top, .bar-middle {
        margin: 3px 0;
    }
    .close .bar-top {
        transform: rotate(-45deg) translate(-9px, 9px);
        background-color: #fff;
        margin: 0;
    }
    .close .bar-bottom {
        transform: rotate(45deg) translate(6px, 6px);
        background-color: #fff;
    }
    .close {
        margin-right: 0.3rem;
    }
    .mobile-ham, .close {
        cursor: pointer;
        margin-top: 3px;
    }
    .modal-nav-l {
        display: -webkit-box;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-pack: justify;
            -ms-flex-pack: justify;
                justify-content: space-between;  
    }
    .modal--content li {
        margin-bottom: 1rem;
    }
    .modal--content li a {
        display: block;
        text-align: center;
    }
}
 
/*  legacy browsers support
 
.nav-container li a {
    color: blue;
}
 
.nav-container li:first-child a {
    color: black;
} */
 
/**
 * Nav Font Size
 */
@media (max-width: 600px) {
    .nav-logo,
    .modal--content--style li a {
        font-size: 1.3rem;
        
    }
}

/**
 * Nav Styles
 */
.nav--style {
    -webkit-box-shadow: 0px 0px 14px 0 rgba(0, 0, 0, 0.75);
            box-shadow: 0px 0px 14px 0 rgba(0, 0, 0, 0.75);
}
 
.active:hover {
    color: rgb(124, 116, 116);
}
 
.nav-logo a {
    color: #000;
}

.modal .modal--header .nav-logo a {
    color: #fff;
}
 
.modal--content--style li {
    border: 1px solid black;
    padding: 0.3rem 0;
    border-radius: 4px;
    background: #fff;
    width: 80%;
    margin: 0 auto 1rem;
    -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
            box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
}

.hero {
    min-height: 100vh;
}

.footer {
    height: 15vmin;
}

.hero-title {
    margin-bottom: 1rem;
}

.hero-description {
    max-width: 35rem;
    text-align: center;
}

.hero--bg {
    background-image: url(../assets/header-s.jpeg),
    -webkit-gradient(linear, left top, left bottom, from(#a8c0ff), to(#3f2b96));
    background-image: url(../assets/header-s.jpeg),
    -webkit-linear-gradient(#a8c0ff, #3f2b96);
    background-image: url(../assets/header-s.jpeg),
    -o-linear-gradient(#a8c0ff, #3f2b96);
    background-image: url(../assets/header-s.jpeg),
    linear-gradient(#a8c0ff, #3f2b96);
    background-position: center top;
    background-repeat: no-repeat;
    background-size: cover;
    background-blend-mode: multiply;
    color: #fff;
}


/* Larger than tablet */
@media (min-width: 750px) {
    .hero {
        background-image: url(../assets/header-m.jpeg),
            -webkit-gradient(linear, left top, left bottom, from(#a8c0ff), to(#3f2b96));
            background-image: url(../assets/header-m.jpeg),
            -webkit-linear-gradient(#a8c0ff, #3f2b96);
            background-image: url(../assets/header-m.jpeg),
            -o-linear-gradient(#a8c0ff, #3f2b96);
            background-image: url(../assets/header-m.jpeg),
            linear-gradient(#a8c0ff, #3f2b96);
    }
}
/* ... */

